@@ -1,0 +1,88 @@
+------------------------------------------------
+-- LorePlay
+-- Simplified Chinese localization
+------------------------------------------------
+LorePlay = LorePlay or {}
+
+SafeAddString(SI_LOREPLAY_LOCATION_KEYWORD_DOLMEN,		"暗锚", 1)						-- "Dolmen"
+SafeAddString(SI_LOREPLAY_LOCATION_KEYWORD_ABYSSAL_GEYSER, 	"深渊间歇泉", 1)			-- "Abyssal Geyser"
+
+SafeAddString(SI_LOREPLAY_PC_TITLE_NAME_M_41, 			"皇帝", 1)						-- "Emperor"
+SafeAddString(SI_LOREPLAY_PC_TITLE_NAME_M_42, 			"昔日的皇帝", 1)				-- "Former Emperor"
+SafeAddString(SI_LOREPLAY_PC_TITLE_NAME_M_47, 			"魔族大君杀戮者", 1)			-- "Daedric Lord Slayer"
+SafeAddString(SI_LOREPLAY_PC_TITLE_NAME_M_48, 			"奈恩的救星", 1)				-- "Savior of Nirn"
+SafeAddString(SI_LOREPLAY_PC_TITLE_NAME_M_51,			"龙星城竞技场勇士", 1)			-- "Dragonstar Arena Champion"
+SafeAddString(SI_LOREPLAY_PC_TITLE_NAME_M_54, 			"漩涡竞技场勇士", 1)			-- "Maelstrom Arena Champion"
+SafeAddString(SI_LOREPLAY_PC_TITLE_NAME_M_55, 			"不畏风暴的", 1)				-- "Stormproof"
+SafeAddString(SI_LOREPLAY_PC_TITLE_NAME_M_56,		 	"完美征服者", 1)				-- "The Flawless Conqueror"
+SafeAddString(SI_LOREPLAY_PC_TITLE_NAME_M_63,			"蛇人霸主", 1)					-- "Ophidian Overlord"
+
+SafeAddString(SI_LOREPLAY_PC_TITLE_NAME_F_41, 			"女皇", 1)						-- "Empress"
+SafeAddString(SI_LOREPLAY_PC_TITLE_NAME_F_42, 			"昔日的女皇", 1)				-- "Former Empress"
+SafeAddString(SI_LOREPLAY_PC_TITLE_NAME_F_47, 			"魔族大君杀戮者", 1)			-- "Daedric Lord Slayer"
+SafeAddString(SI_LOREPLAY_PC_TITLE_NAME_F_48, 			"奈恩的救星", 1)				-- "Savior of Nirn"
+SafeAddString(SI_LOREPLAY_PC_TITLE_NAME_F_51,			"龙星城竞技场勇士", 1)			-- "Dragonstar Arena Champion"
+SafeAddString(SI_LOREPLAY_PC_TITLE_NAME_F_54, 			"漩涡竞技场勇士", 1)			-- "Maelstrom Arena Champion"
+SafeAddString(SI_LOREPLAY_PC_TITLE_NAME_F_55,			"不畏风暴的", 1)				-- "Stormproof"
+SafeAddString(SI_LOREPLAY_PC_TITLE_NAME_F_56,	 		"完美征服者", 1)				-- "The Flawless Conqueror"
+SafeAddString(SI_LOREPLAY_PC_TITLE_NAME_F_63,			"蛇人霸主", 1)					-- "Ophidian Overlord"
+
+SafeAddString(SI_BINDING_NAME_LP_PERFORM_SMART_EMOTE, 			"Perform Smart Emote", 1)
+SafeAddString(SI_BINDING_NAME_LP_TOGGLE_IDLEEMOTES, 			"Toggle IdleEmotes On/Off", 1)
+SafeAddString(SI_BINDING_NAME_LP_SHOW_HIDE_LOREWEAR_CLOTHES, 	"Show/Hide Costumes Only", 1)
+SafeAddString(SI_BINDING_NAME_LP_FORCE_EQUIP_CITY_OUTFIT, 		"Force Equip City Outfit", 1)
+SafeAddString(SI_BINDING_NAME_LP_FORCE_EQUIP_HOUSING_OUTFIT, 	"Force Equip Housing Outfit", 1)
+SafeAddString(SI_BINDING_NAME_LP_FORCE_EQUIP_DUNGEON_OUTFIT, 	"Force Equip Dungeon Outfit", 1)
+SafeAddString(SI_BINDING_NAME_LP_FORCE_EQUIP_ADVENTURE_OUTFIT, 	"Force Equip Adventure Outfit", 1)
+SafeAddString(SI_BINDING_NAME_LP_TOGGLE_ALTERNATIVE_OUTFIT, 	"Toggle Prefered Outfits", 1)
+
+SafeAddString(SI_LOREPLAY_UI_WELCOME, 							"[LorePlay] Welcome to LorePlay, Soulless One!", 1)
+SafeAddString(SI_LOREPLAY_PANEL_SUPPRESS_STARTUP_MESSAGE_NAME, 	"Suppress Startup Message", 1)
+SafeAddString(SI_LOREPLAY_PANEL_SUPPRESS_STARTUP_MESSAGE_TIPS, 	"Suppresses startup message.\n[account-wide settings]", 1)
+SafeAddString(SI_LOREPLAY_PANEL_SE_HEADER, 						"Smart Emotes", 1)
+SafeAddString(SI_LOREPLAY_PANEL_SE_DESCRIPTION, 				"Contextual, appropriate emotes to perform at the touch of a button.\nBy default, pressing performs an emote based on location. However, it adapts and conforms to many different special environmental situations along your travels as well.\n|cFF0000Don't forget to bind your SmartEmotes button!|r", 1)
+SafeAddString(SI_LOREPLAY_PANEL_SE_EDIT_SIGNIFICANT_CHAR_NAME, 	"Significant Other's Character Name", 1)
+SafeAddString(SI_LOREPLAY_PANEL_SE_EDIT_SIGNIFICANT_CHAR_TIPS, 	"For those who have wed with the Ring of Mara, entering the exact character name of your loved one allows for special emotes between you two!\n(Note: Must be friends!)", 1)
+SafeAddString(SI_LOREPLAY_PANEL_SE_INDICATOR_SW_NAME, 			"Toggle Indicator On/Off", 1)
+SafeAddString(SI_LOREPLAY_PANEL_SE_INDICATOR_SW_TIPS, 			"Turns on/off the small, moveable indicator (drama masks) that appears on your screen whenever new special adaptive SmartEmotes are available to be performed.", 1)
+SafeAddString(SI_LOREPLAY_PANEL_SE_INDICATOR_POS_RESET_NAME, 	"Reset Indicator Position", 1)
+SafeAddString(SI_LOREPLAY_PANEL_SE_INDICATOR_POS_RESET_TIPS, 	"Resets the indicator to be positioned in the top left of the screen.", 1)
+SafeAddString(SI_LOREPLAY_PANEL_IE_HEADER, 						"Idle Emotes", 1)
+SafeAddString(SI_LOREPLAY_PANEL_IE_DESCRIPTION, 				"Contextual, automatic emotes that occur when you go idle or AFK (Not moving, not fighting, not stealthing).\n|cFF0000Don't forget to bind your IdleEmotes keypress for quick toggling!|r", 1)
+SafeAddString(SI_LOREPLAY_PANEL_IE_SW_NAME, 					"Toggle IdleEmotes On/Off", 1)
+SafeAddString(SI_LOREPLAY_PANEL_IE_SW_TIPS, 					"Turns on/off the automatic, contextual emotes that occur when you go idle or AFK.\n(Note: Disabling IdleEmotes displays all its settings as off, but will persist after re-enabling.)", 1)
+SafeAddString(SI_LOREPLAY_PANEL_IE_IDLE_TIME_NAME, 				"Idle Time", 1)
+SafeAddString(SI_LOREPLAY_PANEL_IE_IDLE_TIME_TIPS, 				"Determines the wait time in seconds, until a given idle emote will be performed.\nDefault is 20 seconds.\n[account-wide settings]", 1)
+SafeAddString(SI_LOREPLAY_PANEL_IE_EMOTE_DURATION_NAME, 		"Emote Duration", 1)
+SafeAddString(SI_LOREPLAY_PANEL_IE_EMOTE_DURATION_TIPS, 		"Determines how long in seconds a given idle emote will be performed before switching to a new one.\nDefault is 30 seconds.", 1)
+SafeAddString(SI_LOREPLAY_PANEL_IE_PLAY_INST_IN_CITY_SW_NAME, 	"Can Play Instruments In Cities", 1)
+SafeAddString(SI_LOREPLAY_PANEL_IE_PLAY_INST_IN_CITY_SW_TIPS, 	"Determines whether or not your character can perform instrument emotes when idle in cities.", 1)
+SafeAddString(SI_LOREPLAY_PANEL_IE_DANCE_IN_CITY_SW_NAME, 		"Can Dance In Cities", 1)
+SafeAddString(SI_LOREPLAY_PANEL_IE_DANCE_IN_CITY_SW_TIPS, 		"Determines whether or not your character can perform dance emotes when idle in cities.", 1)
+SafeAddString(SI_LOREPLAY_PANEL_IE_BE_DRUNK_IN_CITY_SW_NAME, 	"Can Be Drunk In Cities", 1)
+SafeAddString(SI_LOREPLAY_PANEL_IE_BE_DRUNK_IN_CITY_SW_TIPS, 	"Determines whether or not your character can perform drunken emotes when idle in cities.", 1)
+SafeAddString(SI_LOREPLAY_PANEL_IE_EXERCISE_IN_ZONE_SW_NAME, 	"Can Exercise Outside Cities", 1)
+SafeAddString(SI_LOREPLAY_PANEL_IE_EXERCISE_IN_ZONE_SW_TIPS, 	"Determines whether or not your character can perform exercise emotes when idle outside of cities.", 1)
+SafeAddString(SI_LOREPLAY_PANEL_IE_WORSHIP_SW_NAME, 			"Can Worship/Pray", 1)
+SafeAddString(SI_LOREPLAY_PANEL_IE_WORSHIP_SW_TIPS, 			"Determines whether or not your character can perform prayer and worship emotes when idle in general.", 1)
+SafeAddString(SI_LOREPLAY_PANEL_IE_ALLOWED_IN_HOUSING_NAME, 	"Allow emotes in Housing Editor", 1)
+SafeAddString(SI_LOREPLAY_PANEL_IE_ALLOWED_IN_HOUSING_TIPS, 	"Allows for idle emotes to be performed while in housing editor mode.", 1)
+SafeAddString(SI_LOREPLAY_PANEL_IE_CAMERA_SPIN_DISABLER_NAME, 	"Camera Spin Disabler", 1)
+SafeAddString(SI_LOREPLAY_PANEL_IE_CAMERA_SPIN_DISABLER_TIPS, 	"Allows for emotes to be performed while in menus. Disables camera spin in menus. Removes '" .. GetString(SI_PLAYEREMOTEPLAYFAILURE0) .. "' message.", 1)
+SafeAddString(SI_LOREPLAY_PANEL_LE_SET_OUTFIT_CITY_NAME, 		"Set City Outfit", 1)
+SafeAddString(SI_LOREPLAY_PANEL_LE_SET_OUTFIT_CITY_TIPS, 		"Sets the current outfit (collectibles) your character is wearing as their city outfit, allowing for automatic collectible changing when entering a city.\nAlso saves |cFF0000empty slots|r if the 'Use Favorite ...' setting for that category is enabled!", 1)
+SafeAddString(SI_LOREPLAY_PANEL_LE_SET_OUTFIT_HOUSING_NAME, 	"Set Housing Outfit", 1)
+SafeAddString(SI_LOREPLAY_PANEL_LE_SET_OUTFIT_HOUSING_TIPS, 	"Sets the current outfit (collectibles) your character is wearing as their housing outfit, allowing for automatic collectible changing when entering a house.\nAlso saves |cFF0000empty slots|r if the 'Use Favorite ...' setting for that category is enabled!", 1)
+SafeAddString(SI_LOREPLAY_PANEL_LE_SET_OUTFIT_DUNGEON_NAME, 	"Set Dungeon Outfit", 1)
+SafeAddString(SI_LOREPLAY_PANEL_LE_SET_OUTFIT_DUNGEON_TIPS, 	"Sets the current outfit (collectibles) your character is wearing as their dungeon outfit, allowing for automatic collectible changing when entering a dungeon.\nAlso saves |cFF0000empty slots|r if the 'Use Favorite ...' setting for that category is enabled!", 1)
+SafeAddString(SI_LOREPLAY_PANEL_LE_SET_OUTFIT_ADVENTURE_NAME, 	"Set Adventure Outfit", 1)
+SafeAddString(SI_LOREPLAY_PANEL_LE_SET_OUTFIT_ADVENTURE_TIPS, 	"Sets the current outfit (collectibles) your character is wearing as their adventuring outfit, allowing for automatic collectible changing when running around the land of Tamriel.\nAlso saves |cFF0000empty slots|r if the 'Use Favorite ...' setting for that category is enabled!", 1)
+
+SafeAddString(SI_LOREPLAY_PANEL_LW_HEADER, 						"Lore Wear", 1)
+SafeAddString(SI_LOREPLAY_PANEL_LW_DESCRIPTION, 				"Armor should be worn when venturing Tamriel, but not when in comfortable cities! Your character will automatically and appropriately equip their favorite collectibles depending on where they are.\n|cFF0000Don't forget to bind your LoreWear show/hide clothes button!|r", 1)
+SafeAddString(SI_LOREPLAY_PANEL_LW_SW_NAME, 					"Toggle LoreWear On/Off", 1)
+SafeAddString(SI_LOREPLAY_PANEL_LW_SW_TIPS, 					"Turns on/off the automatic, contextual clothing that will be put on when entering the areas respective to your outfits.\n(Note: Disabling LoreWear displays all its settings as off, but will persist after re-enabling.)", 1)
+SafeAddString(SI_LOREPLAY_PANEL_LW_EQUIP_WHILE_MOUNT_SW_NAME, 	"Allow Equip While Mounted", 1)
+SafeAddString(SI_LOREPLAY_PANEL_LW_EQUIP_WHILE_MOUNT_SW_TIPS, 	"Turns on/off the automatic, contextual clothing that can be put on while riding your trusty steed.", 1)
+
+-- ---
